Fix border, Fix spacing in editor, fix grid align

--- a/src/blocks/navigation/style.scss
+++ b/src/blocks/navigation/style.scss
@@ -403,6 +403,12 @@ $link-color-property: var(
 		& > .menu {
 			display: grid;
 			grid-template-columns: var(--kb-nav-grid-columns, minmax(0, 1fr));
+			> .menu-item {
+				height: 100%;
+				> .kb-link-wrap {
+					height: 100%;
+				}
+			}
 		}
 	}
 }
